--- a/client_app/public/index.html
+++ b/client_app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>FRAS :: Face Recognition based Attendance System</title>
+    <title>DRISHTI :: DRISHTI (Face Recognition System)</title>
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.cerulean.min.css" rel="stylesheet">
     <link href="static/css/app.css" rel="stylesheet">
